[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Objects/Lifebar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Objects/ManaBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Objects/Interface.gd" type="Script" id=3]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.175
margin_bottom = -7.62939e-06
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBar" type="VBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifebar" parent="HBar" instance=ExtResource( 1 )]
margin_right = 256.0
margin_bottom = 64.0

[node name="MBar" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 5.0
margin_right = 281.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" parent="MBar" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 256.0
margin_bottom = 64.0
[connection signal="health_changed" from="." to="HBar/Lifebar" method="_on_Interface_health_changed"]
[connection signal="mana_changed" from="." to="MBar/ManaBar" method="_on_Interface_mana_changed"]
